--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+        <div id="page-title">
+            <h1>ROCK PAPER SCISSORS</h1>
+            <h1>Game</h1>
+        </div>
+        
         <div id="results">
 
         </div>
